# multinet-evaluation

./: .gitignore  CMakeLists.txt  README.md  accuracy.cpp  cleanup.sh  common.h  dk.cpp  dk_pol_groundtruth.py  experiments.cpp  main.cpp  performance.cpp  performance.py  real.cpp  report.ods  synthetic.cpp  t1.sh  t2.sh  t3.sh  t4.sh  t5.sh  t6.sh  telemetry.stp  telemetry_provider.d  utils.cpp
data/: 1k_mix01  1k_mix025  1k_mix04  8k_truth  PARAMS  dk_truth  eu
data/accuracy/: 1k_02_truth  4k_05
data/accuracy_3/: 1k_06  4k_02  4k_06
data/accuracy_5/: 1k_01_truth  1k_02_Community.txt  1k_03_truth  1k_04  1k_04_truth  1k_06  3k_03_truth  4k_01_truth  4k_02_truth  4k_05_truth  4k_06_truth
data/performance/: PARAMS
data/performance_3/: PARAMS
data/performance_5/: 2k_03  2k_03_truth  3k_03  4k_03_truth
data/t1/: 1000_3_03_truth  2000_3_03  2000_3_03_truth  3000_3_03  3000_3_03_truth  4000_3_03  PARAMS
data/t2/: 1000_2_01  1000_2_01_truth  1000_3_01  1000_3_01_truth  1000_4_01  1000_4_01_truth  1000_5_01  1000_5_01_truth  4000_2_01  4000_2_01_truth  4000_3_01  4000_3_01_truth  4000_4_01  4000_4_01_truth  4000_5_01_truth  PARAMS
data/t3/: 10000_3_03_truth  7000_3_03_truth  8000_3_03_truth  9000_3_03_truth  PARAMS
data/t4/: 1000_3_01  1000_3_01_truth  1000_3_02  1000_3_04  1000_3_05_truth  4000_3_01  4000_3_01_truth  4000_3_02_truth  4000_3_03_truth  4000_3_04_truth  4000_3_05_truth  4000_3_06_truth  PARAMS
data/t5/: aucs_truth
data/t6/: dk  dk_truth
plot/: plot.py  t1.py  t2.py  t3.py  t4.py  t5.py  t6.py
results/accuracy/: 1k_01_GLOUVAIN_5  1k_01_PMM_3  1k_01_PMM_5  1k_02_GLOUVAIN_3  1k_02_GLOUVAIN_5  1k_02_PMM_3  1k_02_PMM_5  1k_03_GLOUVAIN_3  1k_03_GLOUVAIN_5  1k_03_PMM_3  1k_03_PMM_5  1k_04_GLOUVAIN_5  1k_04_PMM_3  1k_04_PMM_5  1k_05_GLOUVAIN_5  1k_05_PMM_3  1k_05_PMM_5  1k_06_GLOUVAIN_5  1k_06_PMM_3  1k_06_PMM_5  4k_01_GLOUVAIN_3  4k_01_GLOUVAIN_5  4k_01_PMM_3  4k_01_PMM_5  4k_02_GLOUVAIN_3  4k_02_GLOUVAIN_5  4k_02_PMM_3  4k_02_PMM_5  4k_03_GLOUVAIN_3  4k_03_GLOUVAIN_5  4k_03_PMM_3  4k_03_PMM_5  4k_04_GLOUVAIN_3  4k_04_GLOUVAIN_5  4k_04_PMM_3  4k_04_PMM_5  4k_05_GLOUVAIN_3  4k_05_GLOUVAIN_5  4k_05_PMM_3  4k_05_PMM_5  (+4 more)
results/accuracy_3/: 1k_01_PMM  1k_02_PMM  1k_03_LART  1k_03_PMM  1k_04_GLOUVAIN  1k_04_LART  1k_04_PMM  1k_05_GLOUVAIN  1k_05_LART  1k_05_PMM  1k_06_GLOUVAIN  1k_06_LART  1k_06_PMM  4k_01_GLOUVAIN  4k_01_PMM  4k_02_GLOUVAIN  4k_02_LART  4k_02_PMM  4k_03_GLOUVAIN  4k_03_LART  4k_03_PMM  4k_04_GLOUVAIN  4k_04_LART  4k_04_PMM  4k_05_GLOUVAIN  4k_05_LART  4k_05_PMM  4k_06_GLOUVAIN  4k_06_LART  4k_06_PMM
results/performance/: 10k_GLOUVAIN_3  1k_03_GLOUVAIN_3  1k_03_LART_3  1k_03_LART_5  1k_03_PMM_3  1k_03_PMM_5  2k_03_GLOUVAIN_3  2k_03_GLOUVAIN_5  2k_03_LART_3  2k_03_LART_5  2k_03_PMM_3  2k_03_PMM_5  3k_03_GLOUVAIN_3  3k_03_GLOUVAIN_5  3k_03_LART_3  3k_03_LART_5  3k_03_PMM_3  3k_03_PMM_5  4k_03_GLOUVAIN_5  (+4 more)
telemetry/: add_memory_to_data.py  aggregate.py  telemetry.stp
truth/: 1k_mix01  1k_mix025  1k_mix04  3k_mix01  3k_mix025  3k_mix04  5k_mix01  5k_mix025  5k_mix04  dk
(+200 files in other folders)
